# test-rust-amazon-s3

./: .rustfmt.toml  Cargo.toml  README.md  run.bat
src/: main.rs
src/lib/: configuration.rs  mod.rs
