[package]
name = "test-rust-amazon-s3"
version = "0.1.0"
authors = ["Irisawa Masaru <mass10.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
futures = "^0.3"
serde = "^1.0.2"
bytes = "^0.5"
xml-rs = "^0.8"
serde_derive = "^1.0.2"
serde_json = "*"
#async_std = "*"
tokio = "*"
